# curiosity-machine

./: .agignore  .babelrc  .bowerrc  .coveragerc  .gitignore  .ignore  Gruntfile.js  Makefile  Pipfile  Procfile  README.md  bower.json  circle.yml  coverage.sh  db.sqlite3  example.csv  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.compat.txt  requirements.dev.txt  requirements.minimal.txt  requirements.txt  sample.local.py  subprocess_workers.py  test.sh  video_admin.py  webpack.config.js  webpack_production.config.js
.circleci/: config.yml
challenges/: admin.py  apps.py  factories.py  filtersets.py  forms.py  models.py  presenters.py  progressing.py  tests.py  urls.py  utils.py  validators.py  views.py
cmauth/: admin.py  models.py  urls.py  user_role.py  views.py
cmcomments/: __init__.py  admin.py  apps.py  commenting.py  factories.py  forms.py  models.py  output_settings.py  tests.py  urls.py  utils.py  views.py
cmemails/: README.md  __init__.py  apps.py  mailchimp.py  mailer.py  mandrill.py  models.py  tasks.py  templates.py  tests.py
cmmessages/: admin.py  models.py
curiositymachine/: __init__.py  admin.py  allauth_adapter.py  analytics.py  apps.py  context_processors.py  debug.py  decorators.py  exceptions.py  export_users.py  forms.py  helpers.py  middleware.py  presenters.py  settings.py  shortcuts.py  statistics.py  tasks.py  test_settings.py  tests.py  urls.py  validators.py  views.py  widgets.py  wsgi.py
documents/: admin.py  models.py
educators/: admin.py  annotators.py  apps.py  decorators.py  factories.py  forms.py  middleware.py  models.py  progressing.py  serializers.py  sorting.py  urls.py  views.py
families/: README.md  __init__.py  (+18 more)
(+1561 files in other folders)
