[tool.poetry]
name = "curiosity-machine"
version = "0.1.0"
description = ""
authors = ["Technovation <dev@technovation.org>"]

[tool.poetry.dependencies]
python = "3.7.10"
django = "^2.2.0"
dj-database-url = "0.5.0"
waitress = "1.1.0"
whitenoise = "3.3.1"
redis = "3.2.1"
django-rq = "2.0"
rq-scheduler = "0.9"
rq = "1.0"
djangorestframework = "3.8.2"
django-ace = "1.0.5"
django-allauth = "0.36.0"
django-apptemplates = "1.4"
django-compressor = "2.2"
django-enumfields = "0.10.1"
django-notifications-hq = "1.4.0"
django-ordered-model = "3.4.1"
django-recaptcha = "1.4.0"
django-staticflatpages = "0.5.0"
django-summernote = "0.8.10.0"
django-widget-tweaks = "1.4.3"
pycountry = "18.5.26"
python-dateutil = "2.7.5"
python-dotenv = "0.8.2"
"enum34" = "1.1.6"
requests = "2.19.1"
bleach = "2.1.4"
"tinys3" = "0.1.12"
"django-s3direct" = "1.0.10"
"django-s3-storage" = "0.12.4"
zencoder = "0.6.5"
cloudinary = "1.12.0"
mandrill = "1.0.57"
hellosign-python-sdk = "3.8.7"
newrelic = "3.2.2.94"
rollbar = "0.14.7"
factory-boy = "2.11.1"
"psycopg2-binary" = "2.7.7"
django-debug-toolbar = "1.9.1"
django-html-validator = { git = "https://github.com/stenington/django-html-validator.git" }
django-webpack-loader = "0.6.0"

[tool.poetry.dev-dependencies]
coverage = "4.5.3"
django-extensions = "2.1.6"
django-html-validator = { git = "https://github.com/stenington/django-html-validator.git", tag = "master" }
freezegun = "^0.3.15"
mock = "^4.0.2"
pretend = "1.0.9"
pyquery = "1.4.0"
pytest = "4.4.2"
pytest-cov = "2.7.1"
pytest-django = "3.4.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
